Migrated to json server for static db.
