# src/services/contacts/routes.ts
@@ -1,6 +1,6 @@
 import { Request, Response } from 'express'
 
-import { getContactsByName } from './ContactsControl'
+import { getContactsByName, getContactByName } from './ContactsControl'
 
 export default [
   {
@@ -8,8 +8,19 @@ export default [
     method: 'get',
     handler: [
       async (req: Request, res: Response) => {
-        const contacts: any[] = await getContactsByName()
+        const contacts = await getContactsByName()
         res.status(200).send(contacts)
+      }
+    ]
+  },
+  {
+    path: '/api/v1.0/contacts/:contactID',
+    method: 'get',
+    handler: [
+      async (req: Request, res: Response) => {
+        const contactID: string = req.params.contactID
+        const contact = await getContactByName(contactID)
+        res.status(200).send(contact)
       }
     ]
   }
